# deckvault

./: .gitignore  .gitmodules  CHANGELOG.md  GAME_ENGINE_FINDINGS.md  LICENSE  MOONSHOT.md  README.md  V0_PRODUCTION_RELEASE.md  WIP.md  docker-compose.dev.yml  docker-compose.prod.yml  package.json  turbo.json
.claude/: handoff-meta-deck-seed.md  mcp.json
.claude/agents/: deck-builder.md  deck-cli.md  game-engine.md  orchestrator-lite.md  orchestrator.md  pokemon-mcp.md  pokemon-rules.md  release-manager.md
apps/cron/: package.json
apps/mcp-server/: Cargo.toml  verify.md
apps/mcp-server/.claude/specs/: SPEC_01.md  SPEC_02.md  SPEC_03.md  SPEC_04.md
apps/mcp-server/docs/learning/: Phase-01.md  Phase-02.md  Phase-03.md
apps/mcp-server/src/: lib.rs  main.rs
apps/mcp-server/src/domains/: card.rs  db.rs  deck.rs  error.rs  mod.rs  pricing.rs  set.rs
apps/mcp-server/src/protocol/: handler.rs  jsonrpc.rs  mcp.rs  mod.rs
apps/mcp-server/src/registry/: mod.rs  tool.rs
apps/mcp-server/src/tools/: analyze_probability.rs  compare_cards.rs  echo.rs  get_card_by_id.rs  get_price_info.rs  get_set_cards.rs  list_sets.rs  load_deck.rs  mod.rs  search_cards.rs  validate_deck.rs
apps/mcp-server/src/transport/: mod.rs  server_sent_events.rs  stdio.rs
apps/mcp-server/tests/: integration_tests.rs  protocol_tests.rs  tool_tests.rs
database/: decks.sqlite3.db  pokemon-data.sqlite3.db-shm  pokemon-data.sqlite3.db-wal
docker/: Dockerfile.johto
scripts/: changes-config.ts  changes.ts  db-replicate.ts  install.sh  migrate-prod.sh  stamp-release-versions.ts  tsconfig.json
(+599 files in other folders)
