[package]
name = "pokemon-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
tokio-stream = "0.1"
tokio = { version = "1.42", features = ["full"] }
async-trait = { version = "0.1.89" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0.18"
debugrs = "0.2.2"
rusqlite = { version = "0.38", features = ["bundled"] }
reqwest = { version = "0.13.2", features = ["json"] }
toml = "0.8"